# ampyc

./: CHANGELOG.md  README.md  pyproject.toml
ampyc/controllers/: __init__.py  constraint_tightening_smpc.py  ibsf.py  psf.py
ampyc/params/: __init__.py  params_mpc.py  params_nmpc.py  params_rmpc.py  params_rmpc_smpc.py  params_rnmpc.py  params_sf.py  params_smpc.py
ampyc/plotting/: __init__.py  plot_sf.py  plot_u.py  plot_x.py
notebooks/: sim_NMPC.ipynb  sim_RMPC.ipynb  sim_RMPC_SMPC.ipynb  sim_RNMPC.ipynb  sim_SF.ipynb  sim_SMPC.ipynb  tutorial.ipynb
tests/systems/: test_linear_system.py
